# drone

./: CMakeLists.txt  a.out  common.h  config.cpp  config.h  config.txt  dataProcessor.cpp  dataProcessor.h  dji_data.h  drone.sql  drones.cpp  drones.h  feixing.db  feixing1.db  feixing2.db  feixing9_26.db  feixingbackup.db  file.cpp  file.h  jsonData.cpp  jsonData.h  log.cpp  log.h  log4cplus.properties  main.cpp  makefile  md5.cpp  md5.h  server  server.cpp  server.h  session.cpp  session.h  sessionManager.cpp  sessionManager.h  sqliteConnection.cpp  sqliteConnection.h  task.cpp  task.h  巡检通讯协议.docx
algorithm/: Coordinate.cpp  Coordinate.h  CoordinateSystem.cpp  CoordinateSystem.h  PointToLine.cpp  PointToLine.h  PointToLine11.cpp  PointToLineV3.cpp  PointToLineV3.h  PointToLinev2.cpp  PointToLinev2.h  documentNaming.cpp  documentNaming.h
cereal/: access.hpp  cereal.hpp
client/: b  calculateMd5.cpp  client  client32330  clinet.cpp  clinet32330.cpp  md5  md5.h  nonblockclient  nonblockclient.cpp  openssl  opensslMD5.cpp  twoThread.cpp  twothread
route/: 78
socket/: a.out  mysqlConnector.cpp  phpnetwork.cpp  server.cpp
